Closed Bug 1325240 Opened 7 years ago Closed 7 years ago

Failure in conformance2/programs/gl-get-frag-data-location.html

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

We don't handle GetFradDataLocation('foo[N]') correctly.
Comment on attachment 8820977 [details]
Bug 1325240 - Handle arrays in glsl variable location queries properly. -

https://reviewboard.mozilla.org/r/100358/#review100972

LGTM
Attachment #8820977 - Flags: review?(dmu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f82c6c7870c7
Handle arrays in glsl variable location queries properly. - r=daoshengmu
https://hg.mozilla.org/mozilla-central/rev/f82c6c7870c7
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: