Bug 1325240 - Handle arrays in glsl variable location queries properly. - r=daoshengmu a=lizzard

MozReview-Commit-ID: 1XYwvh9QGmA